Fix logo overlap on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -43,6 +43,7 @@
   box-shadow: 15px 15px 30px 0px rgba(var(--shadow), 0.3);
   border: 2px solid var(--primary);
   overflow: hidden;
+  margin-bottom: 20vh;
 }
 
 .formContainer {
